--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="">
+	<meta name="description" content="Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
+	le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -21,7 +22,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>La Chouette Agence</title>
+	<title>Agence SEO experte en optimisation de référencement naturel</title>
 
 
 	<!-- Analytics -->
@@ -140,7 +141,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h2 class="mg-md text-center tc-white">
+						<h2>
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.<br>
@@ -151,7 +152,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+								class="ltc-white" href="page2.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -169,10 +170,10 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/refonte-site-web-journal-lyon.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1 final.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
+								src="img/refonte-site-web-journal-lyon.jpg"
+								alt="plusieurs magasines ouverts empilés les uns sur les autres pour la nouvelle identité visuelle pour un journal à Lyon"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -182,10 +183,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/création-site-web-photographe.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2 final.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								src="img/création-site-web-photographe.jpg" class="img-responsive portfolio-thumb"
+								alt="jeune fille entrain de regarder dans le viseur de son apprareil photo pour la refonte d'un site web d'un photographe" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -196,10 +197,10 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/création-site-internet-voyageur.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3 converti.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								src="img/création-site-internet-voyageur.jpg" class="img-responsive portfolio-thumb"
+								alt="divers accessoires de photographie professionnelle pour l'illustration d'un blog de voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -209,10 +210,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/conception-site-web-mariage.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4 converti.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								src="img/conception-site-web-mariage.jpg" class="img-responsive portfolio-thumb"
+								alt="bureau avec ordinateur portable, tablette et papeterie festive pour la création d'un site web de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
