--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
-	le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
+	<meta name="description" content="La Chouette agence est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -22,7 +21,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>Agence SEO experte en optimisation de référencement naturel</title>
+	<title>Agence Web Design Lyon</title>
 
 
 	<!-- Analytics -->
@@ -173,7 +172,7 @@
 						<a href="#" data-lightbox="img/refonte-site-web-journal-lyon.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/refonte-site-web-journal-lyon.jpg"
-								alt="plusieurs magasines ouverts empilés les uns sur les autres pour la nouvelle identité visuelle pour un journal à Lyon"
+								alt="plusieurs magasines ouverts représente la nouvelle identité visuelle pour un journal à Lyon"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -186,7 +185,7 @@
 						<a href="#" data-lightbox="img/création-site-web-photographe.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/création-site-web-photographe.jpg" class="img-responsive portfolio-thumb"
-								alt="jeune fille entrain de regarder dans le viseur de son apprareil photo pour la refonte d'un site web d'un photographe" /></a>
+								alt="jeune fille regarde dans le viseur de son apprareil photo pour la refonte d'un site web" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -213,7 +212,7 @@
 						<a href="#" data-lightbox="img/conception-site-web-mariage.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/conception-site-web-mariage.jpg" class="img-responsive portfolio-thumb"
-								alt="bureau avec ordinateur portable, tablette et papeterie festive pour la création d'un site web de mariage" /></a>
+								alt="bureau avec divers écrans et papeterie festive pour la création d'un site web de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -271,8 +270,7 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
+							
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
