--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<img alt="stratégie-web-lyon" src="img/title.png" />
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -125,7 +125,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
+						<img alt="agence-web-internet-lyon"
 							src="img/citation.png" />
 
 					</div>
@@ -164,7 +164,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<img alt="web-design-lyon" src="img/title2.png" />
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
