Social media links

--- a/index.html
+++ b/index.html
@@ -251,31 +251,29 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a href="#" alt="lien twitter" title="Twitter" class="fa fa-twitter icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a href="#" alt="lien facebook" title="Facebook" class="fa fa-facebook icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a href="#" alt="lien dribble" title="Dribbble" class="fa fa-dribbble icon-md"></a>									
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+									<a href="#" alt="lien instagram" title="Instagram" class="fa fa-instagram icon-md"></a>
 								</div>
 							</div>
-							
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
 								Partenaires
-								<ul>
+								<ul style="list-style-type:none">
 									<li><a href="voiture.com">voiture.com</a></li>
 									<li><a href="pizza.com">pizza.com</a></li>
 									<li><a href="matoiture.com">matoiture.com</a></li>
@@ -284,7 +282,7 @@
 							</div>
 							<div class="col-sm-4">
 								Annuaires liste 1
-								<ul>
+								<ul style="list-style-type:none">
 									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
 									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
@@ -298,7 +296,7 @@
 							</div>
 							<div class="col-sm-4">
 								Annuaires liste 2
-								<ul>
+								<ul style="list-style-type:none">
 									<li><a href="betterseo.com">betterseo.com</a></li>
 									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
 									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
