--- a/page2.html
+++ b/page2.html
@@ -85,33 +85,19 @@
 						<form id="form_1" novalidate success-msg="Your message has been sent."
 							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
-								<label>
-									Nom
-								</label>
-								<input id="name" class="form-control" required />
+								<label>Nom<input type="text" id="name" class="form-control" required /></label>
 							</div>
 							<div class="form-group">
-								<label>
-									Adresse email
-								</label>
-								<input id="email" class="form-control" type="email" required />
-							</div>
+								<label>Adresse email<input id="email" class="form-control" type="email" required /></label>
+							</div>		
 							<div class="form-group">
-								<label>
-									Comment nous avez-vous connu ?
-								</label>
-								<input class="form-control" type="email" required id="input_504" />
-							</div>
+								<label>Comment nous avez-vous connu ?<input class="form-control" type="email" required id="input_504" /></label>
+							</div>		
 							<div class="form-group">
-								<label>
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-								</label><textarea id="message" class="form-control" rows="4" cols="50"
+								<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><textarea id="message" class="form-control" rows="4" cols="50"
 									required></textarea>
-							</div>
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
-								type="submit">
-								Envoyer
-							</button>
+							</div>		
+							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
 						</form>
 					</div>
 					<div class="col-sm-6">
@@ -142,23 +128,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a href="#" class="fa fa-twitter icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a href="#" class="fa fa-facebook icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a href="#" class="fa fa-dribbble icon-md"></a>									
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+									<a href="#" class="fa fa-instagram icon-md"></a>
 								</div>
 							</div>
 						</div>
