--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+						<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
 								alt="paris web design logo agence web meilleure agence" height="40" /></a>
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 							<span class="sr-only">Toggle navigation</span>
@@ -68,9 +68,7 @@
 					<div class="col-sm-12">
 						<img src="img/agence-web-design-lyon.png" class="center-block image-resize-mode" width="100" alt="logo de La chouette agence">
 						<h1>La chouette agence.</h1>							
-						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine">Contact</a>
-						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -126,7 +124,7 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<img alt="agence-web-internet-lyon"
-							src="img/citation.png" />
+							src="img/excellente-agence-web-lyon.png" />
 
 					</div>
 				</div>
@@ -150,8 +148,7 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white" href="page2.html">Contactez notre équipe</a><br>
+							qui seront facilement trouvable sur les moteurs de recherche. 
 						</p>
 					</div>
 				</div>
@@ -231,17 +228,13 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<h2>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
-					<div class="col-sm-12 text-center">
-						<a href="page2.html"
-							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
-					</div>
 				</div>
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -251,22 +244,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" alt="lien twitter" title="Twitter" class="fa fa-twitter icon-md"></a>
+									<a href="https://twitter.com/?lang=fr" title="Twitter" class="fa fa-twitter icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" alt="lien facebook" title="Facebook" class="fa fa-facebook icon-md"></a>
+									<a href="https://fr-fr.facebook.com/" title="Facebook" class="fa fa-facebook icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" alt="lien dribble" title="Dribbble" class="fa fa-dribbble icon-md"></a>									
+									<a href="https://dribbble.com/" title="Dribbble" class="fa fa-dribbble icon-md"></a>									
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" alt="lien instagram" title="Instagram" class="fa fa-instagram icon-md"></a>
+									<a href="https://www.instagram.com/?hl=fr" title="Instagram" class="fa fa-instagram icon-md"></a>
 								</div>
 							</div>
 						</div>
@@ -312,7 +305,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
