--- a/page2.html
+++ b/page2.html
@@ -39,7 +39,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+				<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
 						alt="paris web design logo agence web meilleure agence"  height="40" /></a>
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 					<span class="sr-only">Toggle navigation</span>
@@ -91,7 +91,7 @@
 								<label>Adresse email<input id="email" class="form-control" type="email" required /></label>
 							</div>		
 							<div class="form-group">
-								<label>Comment nous avez-vous connu ?<input class="form-control" type="email" required id="input_504" /></label>
+								<label>Comment nous avez-vous connu ?<input class="form-control" type="text" required id="input_504" /></label>
 							</div>		
 							<div class="form-group">
 								<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><textarea id="message" class="form-control" rows="4" cols="50"
@@ -102,7 +102,7 @@
 					</div>
 					<div class="col-sm-6">
 						<p>
-							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
+							<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
 							au vendredi<br>
 						</p>
 					</div>
@@ -118,7 +118,7 @@
 
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -128,29 +128,29 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" class="fa fa-twitter icon-md"></a>
+									<a href="https://twitter.com/?lang=fr" class="fa fa-twitter icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" class="fa fa-facebook icon-md"></a>
+									<a href="https://fr-fr.facebook.com/" class="fa fa-facebook icon-md"></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" class="fa fa-dribbble icon-md"></a>									
+									<a href="https://dribbble.com/" class="fa fa-dribbble icon-md"></a>									
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="#" class="fa fa-instagram icon-md"></a>
+									<a href="https://www.instagram.com/?hl=fr" class="fa fa-instagram icon-md"></a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
