--- a/index.html
+++ b/index.html
@@ -228,13 +228,16 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<h2>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+					<div class="col-sm-12 text-center">
+						<a href="page2.html" class="btn btn-clean btn-rd btn-lg cta-hero">Contact</a>
+					</div>
 				</div>
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
