--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h2>
+						<p class="premier">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.<br>
-						</h2>
+						</p>
 						<p class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
@@ -227,7 +227,7 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+					<p class="premier">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</p>
 					<div class="col-sm-12 text-center">
 						<a href="page2.html" class="btn btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
