--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="La Chouette agence est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
+	<meta name="description"
+		content="La Chouette agence est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -32,43 +33,43 @@
 </head>
 
 <body>
-	<!-- Principal conteneur -->
-	<div class="page-container">
-
-		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
-			<div class="container bloc-sm">
-				<nav class="navbar row">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-							<li><a href="index.html">Accueil</a></li>							
-							<li><a href="page2.html">Contact</a></li>							
-						</ul>
-					</div>
-				</nav>
-			</div>
+	<!-- bloc-0 -->
+	<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="container bloc-sm">
+			<nav class="navbar row">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
+							alt="paris web design logo agence web meilleure agence" height="40" /></a>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="page2.html">Contact</a></li>
+					</ul>
+				</div>
+			</nav>
 		</div>
-		<!-- bloc-0 END -->
+	</div>
+	<!-- bloc-0 END -->
 
-		<!-- bloc-1-presentation -->
+	<!-- bloc-1-presentation -->
+	<section id="top-section">
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/agence-web-design-lyon.png" class="center-block image-resize-mode" width="100" alt="logo de La chouette agence">
-						<h1>La chouette agence.</h1>							
-						
+						<img src="img/agence-web-design-lyon.png" class="center-block image-resize-mode" width="100"
+							alt="logo de La chouette agence">
+						<h1>La chouette agence.</h1>
+
 					</div>
 				</div>
 			</div>
@@ -88,9 +89,9 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Web design
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
@@ -100,9 +101,9 @@
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							&nbsp;Stratégie
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -112,9 +113,9 @@
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Illustrations
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
@@ -123,15 +124,15 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence-web-internet-lyon"
-							src="img/excellente-agence-web-lyon.png" />
+						<img alt="agence-web-internet-lyon" src="img/excellente-agence-web-lyon.png" />
 
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- bloc-2-services END -->
-
+	</section>
+	<section id="bottom-section">
 		<!-- bloc-3-what-i-do -->
 		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
@@ -148,7 +149,7 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. 
+							qui seront facilement trouvable sur les moteurs de recherche.
 						</p>
 					</div>
 				</div>
@@ -235,45 +236,47 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
+	</section>
 
-		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center white">
-							La chouette agence - Agence web basée à Lyon.<br>
-						</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://twitter.com/?lang=fr" title="Twitter" class="fa fa-twitter icon-md"></a>
-								</div>
+	<!-- Footer - bloc-8 -->
+	<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="text-center white">
+						La chouette agence - Agence web basée à Lyon.<br>
+					</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://twitter.com/?lang=fr" title="Twitter"
+									class="fa fa-twitter icon-md"></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://fr-fr.facebook.com/" title="Facebook" class="fa fa-facebook icon-md"></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://fr-fr.facebook.com/" title="Facebook"
+									class="fa fa-facebook icon-md"></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://dribbble.com/" title="Dribbble" class="fa fa-dribbble icon-md"></a>									
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://dribbble.com/" title="Dribbble" class="fa fa-dribbble icon-md"></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://www.instagram.com/?hl=fr" title="Instagram" class="fa fa-instagram icon-md"></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://www.instagram.com/?hl=fr" title="Instagram"
+									class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!-- Footer - bloc-8 END -->
+		</div>
+	</footer>
+	<!-- Footer - bloc-8 END -->
 
-	</div>
-	<!-- Principal conteneur END -->
 
 
 </body>
