--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
 
-	
+
 	<title>Contact</title>
 
 
@@ -31,132 +31,132 @@
 </head>
 
 <body>
-	<!-- Principal conteneur -->
-	<div class="page-container">
 
-<!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
-	<div class="container bloc-sm">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
-						alt="paris web design logo agence web meilleure agence"  height="40" /></a>
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li><a href="index.html">Accueil</a></li>							
-					<li><a href="page2.html">Contact</a></li>							
-				</ul>
-			</div>
-		</nav>
+	<!-- bloc-0 -->
+	<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="container bloc-sm">
+			<nav class="navbar row">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
+							alt="paris web design logo agence web meilleure agence" height="40" /></a>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="page2.html">Contact</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
 	</div>
-</div>
-<!-- bloc-0 END -->
+	<!-- bloc-0 END -->
 
-		<!-- bloc-6 -->
-		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
-							Parlons web design !
-						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-						</p>
-					</div>
+	<!-- bloc-6 -->
+	<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+		<div class="container bloc-lg">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1 class="text-center hero-bloc-text tc-white">
+						Parlons web design !
+					</h1>
+					<p class="text-center mg-lg tc-white tight-width-whitespace">
+						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+					</p>
 				</div>
 			</div>
 		</div>
-		<!-- bloc-6 END -->
+	</div>
+	<!-- bloc-6 END -->
 
-		<!-- bloc-7 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-7">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent."
-							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-							<div class="form-group">
-								<label>Nom<input type="text" id="name" class="form-control" required /></label>
-							</div>
-							<div class="form-group">
-								<label>Adresse email<input id="email" class="form-control" type="email" required /></label>
-							</div>		
-							<div class="form-group">
-								<label>Comment nous avez-vous connu ?<input class="form-control" type="text" required id="input_504" /></label>
-							</div>		
-							<div class="form-group">
-								<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><textarea id="message" class="form-control" rows="4" cols="50"
-									required></textarea>
-							</div>		
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
-						</form>
-					</div>
-					<div class="col-sm-6">
-						<p>
-							<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
-							au vendredi<br>
-						</p>
-					</div>
+	<!-- bloc-7 -->
+	<div class="bloc bgc-white l-bloc" id="bloc-7">
+		<div class="container bloc-lg">
+			<div class="row">
+				<div class="col-sm-6">
+					<form id="form_1" novalidate success-msg="Your message has been sent."
+						fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<div class="form-group">
+							<label>Nom<input type="text" id="name" class="form-control" required /></label>
+						</div>
+						<div class="form-group">
+							<label>Adresse email<input id="email" class="form-control" type="email" required /></label>
+						</div>
+						<div class="form-group">
+							<label>Comment nous avez-vous connu ?<input class="form-control" type="text" required
+									id="input_504" /></label>
+						</div>
+						<div class="form-group">
+							<label for="message">Brief de votre projet (Ajoutez autant de détails que
+								nécessaire)</label><textarea id="message" class="form-control" rows="4" cols="50"
+								required></textarea>
+						</div>
+						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+							type="submit">Envoyer</button>
+					</form>
+				</div>
+				<div class="col-sm-6">
+					<p>
+						<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br>2 place
+						Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
+						au vendredi<br>
+					</p>
 				</div>
 			</div>
 		</div>
-		<!-- bloc-7 END -->
+	</div>
+	<!-- bloc-7 END -->
 
-		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-				class="fa fa-chevron-up"></span></a>
-		<!-- ScrollToTop Button END-->
+	<!-- ScrollToTop Button -->
+	<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+			class="fa fa-chevron-up"></span></a>
+	<!-- ScrollToTop Button END-->
 
 
-		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center white">
-							La chouette agence - Agence web basée à Lyon.<br>
-						</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://twitter.com/?lang=fr" class="fa fa-twitter icon-md"></a>
-								</div>
+	<!-- Footer - bloc-8 -->
+	<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="text-center white">
+						La chouette agence - Agence web basée à Lyon.<br>
+					</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://twitter.com/?lang=fr" class="fa fa-twitter icon-md"></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://fr-fr.facebook.com/" class="fa fa-facebook icon-md"></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://fr-fr.facebook.com/" class="fa fa-facebook icon-md"></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://dribbble.com/" class="fa fa-dribbble icon-md"></a>									
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://dribbble.com/" class="fa fa-dribbble icon-md"></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a href="https://www.instagram.com/?hl=fr" class="fa fa-instagram icon-md"></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a href="https://www.instagram.com/?hl=fr" class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!-- Footer - bloc-8 END -->
+		</div>
+	</footer>
+	<!-- Footer - bloc-8 END -->
 
-	</div>
-	<!-- Principal conteneur END -->
-
-
+	
 </body>
 
 </html>
