--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<h2 class="mg-md text-center">
 							Web design
 						</h2>
-						<p class="text-center ">
+						<p class="text-center">
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
 						</p>
@@ -104,7 +104,7 @@
 						<h2 class="mg-md text-center">
 							&nbsp;Stratégie
 						</h2>
-						<p class="text-center ">
+						<p class="text-center">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 						</p>
@@ -116,7 +116,7 @@
 						<h2 class="mg-md text-center">
 							Illustrations
 						</h2>
-						<p class="text-center ">
+						<p class="text-center">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 						</p>
@@ -175,7 +175,7 @@
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
-						<p class="text-center">
+						<p class="text-center deuxieme">
 							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 						</p>
 					</div>
@@ -187,7 +187,7 @@
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
-						<p class="text-center">
+						<p class="text-center deuxieme">
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 						</p>
 					</div>
@@ -201,7 +201,7 @@
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
-						<p class="text-center">
+						<p class="text-center deuxieme">
 							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
 							articles de ce voyageur.
 						</p>
@@ -214,7 +214,7 @@
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
-						<p class="text-center">
+						<p class="text-center deuxieme">
 							Nous avons travaillé avec cette agence pour créer un site internet permettant la
 							présentation détaillée de leurs prestations.
 						</p>
@@ -227,7 +227,7 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<div class="row">
+				<div class="row black-background">
 					<p class="premier">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</p>
 					<div class="col-sm-12 text-center">
 						<a href="page2.html" class="btn btn-clean btn-rd btn-lg cta-hero">Contact</a>
@@ -243,7 +243,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<p class="text-center white2">
 						La chouette agence - Agence web basée à Lyon.<br>
 					</p>
 					<div class="row row-no-gutters social">
