--- a/page2.html
+++ b/page2.html
@@ -82,7 +82,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<form id="form_1" novalidate success-msg="Your message has been sent."
-						fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						fail-msg="Oops notre serveur ne semble pas répondre. Vraiment désolé pour l'inconvénient que cela vous cause!">
 						<div class="form-group">
 							<label>Nom<input type="text" id="name" class="form-control" required /></label>
 						</div>
