--- a/Contact.html
+++ b/Contact.html
@@ -50,7 +50,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Accueil</a></li>
-						<li><a href="page2.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -82,7 +82,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<form id="form_1" novalidate success-msg="Your message has been sent."
-						fail-msg="Oops notre serveur ne semble pas répondre. Vraiment désolé pour l'inconvénient que cela vous cause!">
+						fail-msg="Oops notre serveur ne semble pas répondre. Vraiment désolé pour l'inconvénient causé!">
 						<div class="form-group">
 							<label>Nom<input type="text" id="name" class="form-control" required /></label>
 						</div>
