--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="text1">
-						<p> La Chouette Agence est une agence de Web Design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+						<p> La Chouette Agence est une agence de Web Design <br>qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -162,7 +162,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="text1">
-						<p>Nous travaillons avec beaucoup de clients, voici nos réalisations</p>
+						<p>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</p>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
