--- a/Contact.html
+++ b/Contact.html
@@ -80,7 +80,7 @@
 	<div class="bloc bgc-white l-bloc" id="bloc-7">
 		<div class="container bloc-lg">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="form_0 col-sm-6">
 					<form id="form_1" novalidate success-msg="Your message has been sent."
 						fail-msg="Oops notre serveur ne semble pas répondre. Vraiment désolé pour l'inconvénient causé!">
 						<div class="form-group">
