--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<p>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</p>
 					</div>
 				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				<div class="row portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/refonte-site-web-journal-lyon.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
@@ -192,7 +192,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				<div class="row portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/création-site-internet-voyageur.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
