--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</button>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
+					<ul class="site-navigation nav navbar-nav">
 						<li><a href="index.html">Accueil</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
