--- a/Contact.html
+++ b/Contact.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+	<meta name="description" content="La Chouette agence est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -39,8 +39,8 @@
 				<div class="navbar-header">
 					<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
 							alt="paris web design logo agence web meilleure agence" height="40" /></a>
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<button id="nav-toggle" type="button" class="navbar-toggle ui-navbar-toggle collapsed" data-toggle="collapse"
+						data-target=".navbar-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -48,7 +48,7 @@
 					</button>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
+					<ul class="site-navigation nav navbar-nav">
 						<li><a href="index.html">Accueil</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
