icons titles page 2

--- a/Contact.html
+++ b/Contact.html
@@ -131,22 +131,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://twitter.com/?lang=fr" class="fa fa-twitter icon-md"></a>
+								<a href="https://twitter.com/?lang=fr" title="Twitter" class="fa fa-twitter icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://fr-fr.facebook.com/" class="fa fa-facebook icon-md"></a>
+								<a href="https://fr-fr.facebook.com/"title="Facebook" class="fa fa-facebook icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://dribbble.com/" class="fa fa-dribbble icon-md"></a>
+								<a href="https://dribbble.com/" title="Dribbble" class="fa fa-dribbble icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://www.instagram.com/?hl=fr" class="fa fa-instagram icon-md"></a>
+								<a href="https://www.instagram.com/?hl=fr" title="Instagram" class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
