--- a/Contact.html
+++ b/Contact.html
@@ -3,8 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="La Chouette agence est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
+	<meta name="keywords"
+		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+	<meta name="description"
+		content="La Chouette agence est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -39,15 +41,15 @@
 				<div class="navbar-header">
 					<a class="navbar-brand" href="index.html"><img src="img/chouette-agence-web-lyon.png"
 							alt="paris web design logo agence web meilleure agence" height="40" /></a>
-					<button id="nav-toggle" type="button" class="navbar-toggle ui-navbar-toggle collapsed" data-toggle="collapse"
-						data-target=".navbar-1" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" aria-expanded="true">
 					<ul class="site-navigation nav navbar-nav">
 						<li><a href="index.html">Accueil</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -131,12 +133,14 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://twitter.com/?lang=fr" title="Twitter" class="fa fa-twitter icon-md"></a>
+								<a href="https://twitter.com/?lang=fr" title="Twitter"
+									class="fa fa-twitter icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://fr-fr.facebook.com/"title="Facebook" class="fa fa-facebook icon-md"></a>
+								<a href="https://fr-fr.facebook.com/" title="Facebook"
+									class="fa fa-facebook icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
@@ -146,7 +150,8 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://www.instagram.com/?hl=fr" title="Instagram" class="fa fa-instagram icon-md"></a>
+								<a href="https://www.instagram.com/?hl=fr" title="Instagram"
+									class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
@@ -156,7 +161,7 @@
 	</footer>
 	<!-- Footer - bloc-8 END -->
 
-	
+
 </body>
 
 </html>
