--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<span class="icon-bar"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" aria-expanded="true">
 					<ul class="site-navigation nav navbar-nav">
 						<li><a href="index.html">Accueil</a></li>
 						<li><a href="contact.html">Contact</a></li>
